--- a/package.json
+++ b/package.json
@@ -42,9 +42,11 @@
     "ag-grid-angular": "^20.2.0",
     "ag-grid-community": "^20.2.0",
     "ag-grid-enterprise": "^20.2.0",
+    "font-awesome": "^4.7.0",
     "lodash": "^4.17.11",
     "log4js": "~1.1.1",
-    "moment": "^2.23.0"
+    "moment": "^2.23.0",
+    "spectre.css": "^0.5.8"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.10.0",
