--- a/package.json
+++ b/package.json
@@ -45,8 +45,8 @@
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.11",
     "log4js": "~1.1.1",
-    "mathjs": "^5.9.0",
     "moment": "^2.23.0",
+    "pinyin": "^2.8.3",
     "spectre.css": "^0.5.8"
   },
   "devDependencies": {
