--- a/package.json
+++ b/package.json
@@ -39,15 +39,15 @@
     "version": "conventional-changelog -i CHANGELOG.md -s -r 0 && git add CHANGELOG.md"
   },
   "dependencies": {
-    "ag-grid-angular": "^20.2.0",
-    "ag-grid-community": "^20.2.0",
-    "ag-grid-enterprise": "^20.2.0",
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.11",
     "log4js": "~1.1.1",
     "moment": "^2.23.0",
     "pinyin": "^2.8.3",
-    "spectre.css": "^0.5.8"
+    "spectre.css": "^0.5.8",
+    "ag-grid": "^18.1.2",
+    "ag-grid-angular": "^18.1.0",
+    "ag-grid-enterprise": "^18.0.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.10.0",
